--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,10 @@
             <id>CodeMC</id>
             <url>https://repo.codemc.org/repository/maven-public/</url>
         </repository>
+        <repository>
+            <id>Java-Express</id>
+            <url>https://github.com/simonwep/java-express/tree/master</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -87,18 +91,18 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.19.0</version>
+            <version>2.23.1</version>
         </dependency>
         <dependency>
             <groupId>org.bstats</groupId>
             <artifactId>bstats-bukkit</artifactId>
-            <version>3.0.0</version>
+            <version>3.0.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.Simonwep</groupId>
+            <groupId>io.vacco.java-express</groupId>
             <artifactId>java-express</artifactId>
-            <version>0.1.1</version>
+            <version>0.2.1</version>
         </dependency>
         <dependency>
             <groupId>io.socket</groupId>
